2003-10-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h [WINVER >= 0x0500] (EVENT_MAX): Ooops...
	wrong value for constant.

2003-10-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h [WINVER >= 0x0500] (EVENT_*): Add constants.

	* include/uxtheme.h: Cleanup.
	* include/tmschema.h: Cleanup.

2003-10-02  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/winspool.h (GetDefaultPrinter[AW]): Add functions.
	* lib/winspool.def (GetDefaultPrinter[AW]): Add stubs.

2003-10-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (INVALID_FILE_ATTRIBUTES): Fix define.

2003-09-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (BSF_*, BSM_*):  Sync constants defined in
	both winuser.h and dbt.h.
	* include/dbt.h (BSF_*, BSM_*): Likewise.

	* include/winuser.h (struct tagRAWINPUT): Remove
	_ANONYMOUS_UNION tag from named union.
	(struct tagRAWMOUSE): Add _ANONYMOUS_STRUCT to nameless struct.

2003-09-30  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/dhcpcdsk.h: New file.
	Note that MSDN is confused about whether it should start constant
	and structure names with DHCPCAPI or DHCPAPI. It's using both but
	experience suggests it's DHCPCAPI with `C'.

	* lib/dhcpcsvc.def: New file.

2003-09-30  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h [_WIN32_WINNT >= 0x0501] (RIM_INPUT,
	RIM_INPUTSINK): Add constants, for use by WM_INPUT notification.

	* include/winuser.h [_WIN32_WINNT >= 0x0501] (RIDEV_REMOVE,
	RIDEV_EXCLUDE, RIDEV_PAGEONLY, RIDEV_NOLEGACY, RIDEV_INPUTSINK,
	RIDEV_CAPTUREMOUSE, RIDEV_NOHOTKEYS, RIDEV_APPKEYS): Add constants,
	for use in RAWINPUTDEVICE.

	* include/winuser.h [_WIN32_WINNT >= 0x0501]
	(GetRawInputDeviceInfo[AW]): Ooops... there are
	ANSI/Unicode versions of this function.

	* lib/user32.def (GetRawInputDeviceInfo[AW]): Ooops... there
	are ANSI/Unicode versions of this function.
