@@ -2095,50 +2095,62 @@ extern "C" {
 #if (_WIN32_WINNT >= 0x0501)
 #define DEVICE_NOTIFY_ALL_INTERFACE_CLASSES 0x00000004
 #endif
-#define EVENT_MIN                      0x00000001
-#define EVENT_SYSTEM_SOUND             0x00000001
-#define EVENT_SYSTEM_ALERT             0x00000002
-#define EVENT_SYSTEM_FOREGROUND        0x00000003
-#define EVENT_SYSTEM_MENUSTART         0x00000004
-#define EVENT_SYSTEM_MENUEND           0x00000005
-#define EVENT_SYSTEM_MENUPOPUPSTART    0x00000006
-#define EVENT_SYSTEM_MENUPOPUPEND      0x00000007
-#define EVENT_SYSTEM_CAPTURESTART      0x00000008
-#define EVENT_SYSTEM_CAPTUREEND        0x00000009
-#define EVENT_SYSTEM_MOVESIZESTART     0x0000000a
-#define EVENT_SYSTEM_MOVESIZEEND       0x0000000b
-#define EVENT_SYSTEM_CONTEXTHELPSTART  0x0000000c
-#define EVENT_SYSTEM_CONTEXTHELPEND    0x0000000d
-#define EVENT_SYSTEM_DRAGDROPSTART     0x0000000e
-#define EVENT_SYSTEM_DRAGDROPEND       0x0000000f
-#define EVENT_SYSTEM_DIALOGSTART       0x00000010
-#define EVENT_SYSTEM_DIALOGEND         0x00000011
-#define EVENT_SYSTEM_SCROLLINGSTART    0x00000012
-#define EVENT_SYSTEM_SCROLLINGEND      0x00000013
-#define EVENT_SYSTEM_SWITCHSTART       0x00000014
-#define EVENT_SYSTEM_SWITCHEND         0x00000015
-#define EVENT_SYSTEM_MINIMIZESTART     0x00000016
-#define EVENT_SYSTEM_MINIMIZEEND       0x00000017
-#define EVENT_OBJECT_CREATE            0x00008000
-#define EVENT_OBJECT_DESTROY           0x00008001
-#define EVENT_OBJECT_SHOW              0x00008002
-#define EVENT_OBJECT_HIDE              0x00008003
-#define EVENT_OBJECT_REORDER           0x00008004
-#define EVENT_OBJECT_FOCUS             0x00008005
-#define EVENT_OBJECT_SELECTION         0x00008006
-#define EVENT_OBJECT_SELECTIONADD      0x00008007
-#define EVENT_OBJECT_SELECTIONREMOVE   0x00008008
-#define EVENT_OBJECT_SELECTIONWITHIN   0x00008009
-#define EVENT_OBJECT_STATECHANGE       0x0000800a
-#define EVENT_OBJECT_LOCATIONCHANGE    0x0000800b
-#define EVENT_OBJECT_NAMECHANGE        0x0000800c
-#define EVENT_OBJECT_DESCRIPTIONCHANGE 0x0000800d
-#define EVENT_OBJECT_VALUECHANGE       0x0000800e
-#define EVENT_OBJECT_PARENTCHANGE      0x0000800f
-#define EVENT_OBJECT_HELPCHANGE        0x00008010
-#define EVENT_OBJECT_DEFACTIONCHANGE   0x00008011
-#define EVENT_OBJECT_ACCELERATORCHANGE 0x00008012
-#define EVENT_MAX                      0x7fffffff
+#define EVENT_MIN                       0x00000001
+#define EVENT_SYSTEM_SOUND              0x00000001
+#define EVENT_SYSTEM_ALERT              0x00000002
+#define EVENT_SYSTEM_FOREGROUND         0x00000003
+#define EVENT_SYSTEM_MENUSTART          0x00000004
+#define EVENT_SYSTEM_MENUEND            0x00000005
+#define EVENT_SYSTEM_MENUPOPUPSTART     0x00000006
+#define EVENT_SYSTEM_MENUPOPUPEND       0x00000007
+#define EVENT_SYSTEM_CAPTURESTART       0x00000008
+#define EVENT_SYSTEM_CAPTUREEND         0x00000009
+#define EVENT_SYSTEM_MOVESIZESTART      0x0000000a
+#define EVENT_SYSTEM_MOVESIZEEND        0x0000000b
+#define EVENT_SYSTEM_CONTEXTHELPSTART   0x0000000c
+#define EVENT_SYSTEM_CONTEXTHELPEND     0x0000000d
+#define EVENT_SYSTEM_DRAGDROPSTART      0x0000000e
+#define EVENT_SYSTEM_DRAGDROPEND        0x0000000f
+#define EVENT_SYSTEM_DIALOGSTART        0x00000010
+#define EVENT_SYSTEM_DIALOGEND          0x00000011
+#define EVENT_SYSTEM_SCROLLINGSTART     0x00000012
+#define EVENT_SYSTEM_SCROLLINGEND       0x00000013
+#define EVENT_SYSTEM_SWITCHSTART        0x00000014
+#define EVENT_SYSTEM_SWITCHEND          0x00000015
+#define EVENT_SYSTEM_MINIMIZESTART      0x00000016
+#define EVENT_SYSTEM_MINIMIZEEND        0x00000017
+#define EVENT_OBJECT_CREATE             0x00008000
+#define EVENT_OBJECT_DESTROY            0x00008001
+#define EVENT_OBJECT_SHOW               0x00008002
+#define EVENT_OBJECT_HIDE               0x00008003
+#define EVENT_OBJECT_REORDER            0x00008004
+#define EVENT_OBJECT_FOCUS              0x00008005
+#define EVENT_OBJECT_SELECTION          0x00008006
+#define EVENT_OBJECT_SELECTIONADD       0x00008007
+#define EVENT_OBJECT_SELECTIONREMOVE    0x00008008
+#define EVENT_OBJECT_SELECTIONWITHIN    0x00008009
+#define EVENT_OBJECT_STATECHANGE        0x0000800a
+#define EVENT_OBJECT_LOCATIONCHANGE     0x0000800b
+#define EVENT_OBJECT_NAMECHANGE         0x0000800c
+#define EVENT_OBJECT_DESCRIPTIONCHANGE  0x0000800d
+#define EVENT_OBJECT_VALUECHANGE        0x0000800e
+#define EVENT_OBJECT_PARENTCHANGE       0x0000800f
+#define EVENT_OBJECT_HELPCHANGE         0x00008010
+#define EVENT_OBJECT_DEFACTIONCHANGE    0x00008011
+#define EVENT_OBJECT_ACCELERATORCHANGE  0x00008012
+#if (_WIN32_WINNT >= 0x0501)
+#define EVENT_CONSOLE_CARET             0x00004001
+#define CONSOLE_CARET_SELECTION         0x00000001
+#define CONSOLE_CARET_VISIBLE           0x00000002
+#define EVENT_CONSOLE_UPDATE_REGION     0x00004002
+#define EVENT_CONSOLE_UPDATE_SIMPLE     0x00004003
+#define EVENT_CONSOLE_UPDATE_SCROLL     0x00004004
+#define EVENT_CONSOLE_LAYOUT            0x00004005
+#define EVENT_CONSOLE_START_APPLICATION 0x00004006
+#define CONSOLE_APPLICATION_16BIT       0x00000001
+#define EVENT_CONSOLE_END_APPLICATION   0x00004007
+#endif /* (_WIN32_WINNT >= 0x0501) */
+#define EVENT_MAX                       0x7fffffff
 #endif /* (WINVER >= 0x0500) */
 #if (_WIN32_WINNT >= 0x0500 || _WIN32_WINDOWS >= 0x0490)
 #define ASFW_ANY ((DWORD)-1)
